# Set default target OS and CPU
if (target_os == "") {
  target_os = "linux"
}
if (target_cpu == "") {
  target_cpu = "x64"
}

# Set compiler flag for configuration
declare_args() {
  is_debug = true
  use_clang = false
}

# Use the specified toolchain
if (use_clang) {
  set_default_toolchain("//build/toolchain:clang")
} else {
  set_default_toolchain("//build/toolchain:gcc")
}